@@ -11,8 +11,9 @@
 		<PROPERTY NAME="commentStart" VALUE="("/>
 		<PROPERTY NAME="commentEnd" VALUE=")"/>
 		<PROPERTY NAME="lineComment" VALUE="!"/>
+		<PROPERTY NAME="noWordSep" VALUE="+-*=><;.?/"/>
 	</PROPS>
-	<RULES IGNORE_CASE="FALSE" ESCAPE="\" NO_WORD_SEP="+-*=><;.?">
+	<RULES IGNORE_CASE="FALSE" ESCAPE="\" NO_WORD_SEP="+-*=><;.?/">
 		<EOL_SPAN TYPE="COMMENT4">!!!</EOL_SPAN>
 		<EOL_SPAN TYPE="COMMENT2">#!</EOL_SPAN>
 		<EOL_SPAN TYPE="COMMENT1">!</EOL_SPAN>
